fixed searchbutton alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,15 @@ body {
 .searchInputBox {
     /* outline: solid 2px red; */
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     justify-content: center;
-    width: 50%;
+    /* width: 60%; */
     /* padding: 2%; */
 }
 
+.input-group-append {
+    /* display: flex; */
+}
 .form-control {
     box-shadow: 0px 0px 10px 2px black;
 }
@@ -30,7 +33,7 @@ body {
     box-shadow: 0px 0px 10px 2px black;
 }
 
-.input-group {
+#inputForm {
     
     width: 500px;
     /* height: 50px; */
